--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h2 class="headerText">個人用学習サイト</h2>
+      <h2 class="headerText">学習サイトメニュー</h2>
       <ul class="buttonGroup">
         <li>
           <button class="backupButton" onclick="CreateFullBackUp()">
