タブ名の変更

--- a/pages/memo.html
+++ b/pages/memo.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
-    <title>メモ</title>
+    <title></title>
     <link rel="stylesheet" href="../asetts/style.css" />
   </head>
   <body>
